--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,58 @@
     <meta name="description" content="An example web page built in Web Skills class">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
+      body{
+        background-color:#4A547F;
+        font-family: Garamond, Georgia, serif;
+      }
+      #container{
+        background-color:white;
+        width: 500px;
+        margin-left: auto;
+        margin-right: auto;
+        border: 20px solid #33333;
+        padding: 15px;
+      }
+      h1{
+        font-size: 60px; 
+        text-align: center;
+        margin: 0;
+      }
+
+      h2{
+        text-align: center;
+        margin-top: 0;
+      }
+
+      ul{
+        text-align: center;
+        background-color: #939CBF;
+        padding: 10px;
+      }
+
+      li{
+        display: inline;
+        padding: 10px;
+      }
+
+      li:hover{
+        background-color: white;
+        cursor: pointer;
+      }
+
+      .quote{
+        margin: 30px;
+        font-style: italic;
+        font-family: Helvetica, Arial, serif;
+        line-height: 20px;
+        color: #999999;
+      }
+
+      img{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+      }
 
 
     </style>
@@ -14,7 +66,7 @@
   <body>
     <div id="container">
       <header>
-        <h1>Jeremy Rue</h1>
+        <h1>Katey Rusch</h1>
         <h2>My first web page</h2>
       </header>
       <nav>
