--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>My First Webpage</title>
-    <meta name="description" content="An example web page built in Web Skills class">
+    <title>Journalist</title>
+    <meta name="description" content="Katey Rusch's Portfolio">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
       body{
-        background-color:#4A547F;
+        background-color:#deebf7;
         font-family: Garamond, Georgia, serif;
       }
       #container{
-        background-color:white;
+        background-color:green;
         width: 500px;
         margin-left: auto;
         margin-right: auto;
