--- a/src/index.html
+++ b/src/index.html
@@ -8,16 +8,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
       body{
-        background-color:#deebf7;
+        background-color:#e5f5f9;
         font-family: Garamond, Georgia, serif;
       }
       #container{
-        background-color:green;
-        width: 500px;
+        background-color:#99d8c9;
+        width: 600px;
         margin-left: auto;
         margin-right: auto;
-        border: 20px solid #33333;
-        padding: 15px;
+        border: 30px solid ##2ca25f;
+        padding: 20px;
       }
       h1{
         font-size: 60px; 
@@ -32,7 +32,7 @@
 
       ul{
         text-align: center;
-        background-color: #939CBF;
+        background-color: #2ca25f;
         padding: 10px;
       }
 
@@ -51,13 +51,16 @@
         font-style: italic;
         font-family: Helvetica, Arial, serif;
         line-height: 20px;
-        color: #999999;
+        text-align: center
+        color: #99999;
       }
 
       img{
         display: block;
         margin-left: auto;
         margin-right: auto;
+        max-width:50%;
+        height:auto;
       }
 
 
@@ -67,29 +70,33 @@
     <div id="container">
       <header>
         <h1>Katey Rusch</h1>
-        <h2>My first web page</h2>
+        <h2>Journalist</h2>
       </header>
       <nav>
         <ul>
           <li>Home</li>
-          <li>Blog</li>
-          <li>Portfolio</li>
-          <li>Contact</li>
+          <li>Education</li>
+          <li>Experience</li>
+          <li>Awards</li>
         </ul>
       </nav>
       <article>
-        <h2>Photos from my last vacation</h2>
-        <img src="https://media.journalism.berkeley.edu/upload/2020/02/1580836066772cb8d.jpg" alt="Flower">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <p class="quote">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <img src="https://media.journalism.berkeley.edu/upload/2020/02/15813990656a7d1f9.jpg" alt="Katey Rusch">
+        <p>Katey Rusch is an award-winning investigative journalist based in the Bay Area. She’s spent the last decade working in local television newsrooms across the country as an on-air reporter, writer, and producer.</p>
+        <p>A graduate from Northwestern University’s Medill School of Journalism, Katey’s won numerous awards in her tenure as a video journalist including several Emmys and a Regional Edward R. Murrow award for a series about fracking and the potential energy in shale oil reserves.</p>
+        <p>Changing gears, Katey is transitioning from television to print, attending the University of California Berkley pursuing her Master of Journalism with a focus on narrative writing and investigative journalism. Currently, she’s reporting on politics and government for the school’s hyper-local news site Oakland North and working across the street with the Investigative Reporting Program (IRP) on their California Corruption project.</p>
+        <p>This summer she will be continuing her work with the IRP. When Katey isn’t poring over public record’s requests, you can find this Wisconsin native praising her Packers, running her worries away or spending time with her husband.</p>
       </article>
       <article>
-        <h2>Photos from my last vacation</h2>
-        <img id="flower" src="https://media.journalism.berkeley.edu/upload/2020/02/1580836066772cb8d.jpg" alt="Flower">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <p class="quote">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <img id="students" src="https://media.journalism.berkeley.edu/upload/2020/02/15813994378ffb549.jpg" alt="IRP Students">
+        <p></p>
+        <h2>Education</h2>
+        <p class="quote">University of California Berkeley: Master of Journalism (expected graduation May 2020)</p>
+        <p class="quote">Northwestern University: B.S. Journalism & Religion</p>
+        <h2>Experience</h2>
+        <p class="quote">KCPQ-TV, Seattle, WA - Writer/Associate Producer/Story Producer</p>
+        <p class="quote">Seattle Weekly, Seattle, WA - Freelance Contributor</p>
+        <p class="quote">KING-TV, Seattle, WA - Reporter/Writer</p>
       </article>
     </div>
   </body>
